@@ -1,4 +1,5 @@
 2019-01-14 Fixed the problem of latex reloading in a quiz addon
+2019-01-11 Added disable enable commands to Media Recorder addon
 2019-01-10 Added commands to Text, Ordering, Image Gap and Choice
 2019-01-04 Fixed setting player controller in Shape Tracing module
 2019-01-02 Added command isOK to a connection addon
